infra/projet-cloud-back-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projet-cloud-back-deployment
spec:
  selector:
    matchLabels:
      app: projet-cloud-back
  replicas: 1
  template:
    metadata:
      labels:
        app: projet-cloud-back
    spec:
      containers:
      - name: projet-cloud-back
        image: vharaphis/projet-cloud-back
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: projet-cloud-back-service
spec:
  type: NodePort
  selector:
    app: projet-cloud-back
  ports:
    - name: nodejs-server
      port: 80
      targetPort: 5000
