infra/projet-cloud-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projet-cloud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: projet-cloud-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: projet-cloud-app-service
            port:
              number: 3000
  - host: projet-cloud-back.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: projet-cloud-back-service
            port:
              number: 5000
